src/objects/Days_Before_EOM__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Complaint_Digital_Record_Type_Id__c</fullName>
        <label>Complaint Digital Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complaint_Newspaper_Record_Type_Id__c</fullName>
        <label>Complaint Newspaper Record Type Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Of_Days__c</fullName>
        <label>Number Of Days</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Days Before EOM and Case Record Type Id</label>
</CustomObject>